feat: 完成 OpenAI Responses API 接入并全面优化翻译与配置体验 - 完整接入 OpenAI Responses API（非流式 + 流式 SSE），新增事件解析与文本提取逻辑，并保留 structured output 回退与错误处理 - 在 LLM 层按 providerType 自动路由 OPENAI_COMPAT(/chat/completions) 与 OPENAI_RESPONSE(/responses) - 新增 OpenAIResponsesRequest 请求模型，支持从现有 messages 映射到 responses input，并兼容 text.format 与自定义参数 - 修复聊天输出自动翻译竞态：自动触发延迟投递、聊天行匹配增强（引用/内容双匹配）与重试机制，解决 “Could not find chat line to update” 报错 - 优化 missing key 显示：物品 tooltip 不再逐行报错，改为底部 Translating 状态；动画支持灰白到红色波浪渐变并在重提后回退；计分板同步同动画 - 调整失败重试优先级：重试任务入队头（最高优先级），普通任务入队尾，提升恢复速度 - 修复计分板纹理签名异常链路：避免触发 scoreboardEntry.name() 相关校验路径，改为安全文本映射策略 - 升级配置 UI 顶栏流程：完成=保存并关闭；新增取消（回滚快照）与红色重置（确认后重置） - 将重置确认改为配置页内同风格弹窗（非原版 ConfirmScreen），并接入 ESC/点外部关闭优先级 - 为 Chat Output/Chat Input/Item/Scoreboard 新增独立目标语言输入框，并补充中英文文案键

--- a/src/main/resources/assets/translate_allinone/lang/en_us.json
+++ b/src/main/resources/assets/translate_allinone/lang/en_us.json
@@ -119,14 +119,14 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.custom_parameters.@Tooltip": "Custom parameters to be sent with the API request",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.keybinding": "Keybinding Settings",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.keybinding.mode": "Keybinding Mode",
-  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.keybinding.mode.@PrefixText": "The keybinding must be set in the game's control settings.",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.keybinding.mode.@PrefixText": "Set keybinding in the mod config screen.",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.keybinding.mode.@Tooltip[0]": "Keybinding mode for item translation.",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.keybinding.mode.@Tooltip[1]": "- Hold to Translate: Translate only when the key is pressed.",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.keybinding.mode.@Tooltip[2]": "- Hold for Original: Always translate, show original text when the key is pressed.",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.keybinding.mode.@Tooltip[3]": "- Disabled: The key does not affect translation behavior.",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.keybinding": "Keybinding Settings",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.keybinding.mode": "Keybinding Mode",
-  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.keybinding.mode.@PrefixText": "The keybinding must be set in the game's control settings.",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.keybinding.mode.@PrefixText": "Set keybinding in the mod config screen.",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.keybinding.mode.@Tooltip[0]": "Keybinding mode for scoreboard translation.",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.keybinding.mode.@Tooltip[1]": "- Hold to Translate: Translate only when the key is pressed.",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.keybinding.mode.@Tooltip[2]": "- Hold for Original: Always translate, show original text when the key is pressed.",
@@ -178,5 +178,160 @@
   "text.translate_allinone.translate_button_hover": "Translate this message",
   "text.translate_allinone.processing": "Processing...",
   "text.translate_allinone.thinking": "Thinking... Tokens:%d",
-  "text.translate_allinone.connecting": "Connecting..."
+  "text.translate_allinone.connecting": "Connecting...",
+
+  "text.translate_allinone.configscreen.title": "Translate_AllinOne Config",
+  "text.translate_allinone.configscreen.button.save": "SAVE",
+  "text.translate_allinone.configscreen.button.done": "DONE",
+  "text.translate_allinone.configscreen.button.prev": "< PREV",
+  "text.translate_allinone.configscreen.button.next": "NEXT >",
+  "text.translate_allinone.configscreen.button.add_profile": "ADD PROFILE",
+  "text.translate_allinone.configscreen.button.add_provider": "ADD",
+  "text.translate_allinone.configscreen.button.confirm_add_provider": "ADD PROVIDER",
+  "text.translate_allinone.configscreen.button.delete_provider": "DELETE",
+  "text.translate_allinone.configscreen.button.delete": "DELETE",
+  "text.translate_allinone.configscreen.button.test_connection": "TEST CONNECTION",
+  "text.translate_allinone.configscreen.button.test": "TEST",
+  "text.translate_allinone.configscreen.button.show_key": "SHOW",
+  "text.translate_allinone.configscreen.button.hide_key": "HIDE",
+  "text.translate_allinone.configscreen.button.add_model": "ADD MODEL",
+  "text.translate_allinone.configscreen.button.edit_custom_parameters": "EDIT PARAMS (%s)",
+  "text.translate_allinone.configscreen.button.add_root_parameter": "ADD ROOT PARAM",
+  "text.translate_allinone.configscreen.button.add_sibling_parameter": "ADD SIBLING",
+  "text.translate_allinone.configscreen.button.add_child_parameter": "ADD CHILD",
+  "text.translate_allinone.configscreen.button.delete_parameter": "DELETE PARAM",
+  "text.translate_allinone.configscreen.button.model_save": "SAVE MODEL",
+  "text.translate_allinone.configscreen.button.cancel": "CANCEL",
+  "text.translate_allinone.configscreen.button.reset": "RESET",
+  "text.translate_allinone.configscreen.button.hotkey_clear": "CLEAR HOTKEY",
+  "text.translate_allinone.configscreen.sections": "Sections",
+  "text.translate_allinone.configscreen.panel": "Panel: %s",
+  "text.translate_allinone.configscreen.section.providers": "Providers",
+  "text.translate_allinone.configscreen.section.chat_output": "Chat Output",
+  "text.translate_allinone.configscreen.section.chat_input": "Chat Input",
+  "text.translate_allinone.configscreen.section.item": "Item",
+  "text.translate_allinone.configscreen.section.scoreboard": "Scoreboard",
+  "text.translate_allinone.configscreen.state.on": "ON",
+  "text.translate_allinone.configscreen.state.off": "OFF",
+  "text.translate_allinone.configscreen.state.disabled": "DISABLED",
+  "text.translate_allinone.configscreen.state.hold_to_translate": "HOLD TO TRANSLATE",
+  "text.translate_allinone.configscreen.state.hold_to_see_original": "HOLD TO SEE ORIGINAL",
+  "text.translate_allinone.configscreen.state.hotkey_listening": "Press a key... (ESC to cancel)",
+  "text.translate_allinone.configscreen.state.hotkey_unbound": "UNBOUND",
+  "text.translate_allinone.configscreen.label.toggle": "%s: %s",
+  "text.translate_allinone.configscreen.label.enabled": "Enabled",
+  "text.translate_allinone.configscreen.label.auto_translate": "Auto Translate",
+  "text.translate_allinone.configscreen.label.streaming": "Streaming",
+  "text.translate_allinone.configscreen.label.translate_item_name": "Translate Item Name",
+  "text.translate_allinone.configscreen.label.translate_item_lore": "Translate Item Lore",
+  "text.translate_allinone.configscreen.label.item_threads": "Item Worker Threads",
+  "text.translate_allinone.configscreen.label.item_batch_size": "Item Batch Size",
+  "text.translate_allinone.configscreen.label.translate_prefix_suffix": "Translate Prefix/Suffix",
+  "text.translate_allinone.configscreen.label.translate_player_name": "Translate Player Name",
+  "text.translate_allinone.configscreen.label.target_language": "Target Language",
+  "text.translate_allinone.configscreen.group.basic": "Basic",
+  "text.translate_allinone.configscreen.group.hotkey": "Hotkey",
+  "text.translate_allinone.configscreen.group.performance": "Performance",
+  "text.translate_allinone.configscreen.group.route": "Routing",
+  "text.translate_allinone.configscreen.group.providers.list": "Provider List",
+  "text.translate_allinone.configscreen.group.providers.info": "Provider Info",
+  "text.translate_allinone.configscreen.group.providers.models": "Model Management",
+  "text.translate_allinone.configscreen.label.hotkey_mode": "Hotkey Mode: %s",
+  "text.translate_allinone.configscreen.label.hotkey_binding": "Hotkey: %s",
+  "text.translate_allinone.configscreen.label.route_model": "Route Model: %s",
+  "text.translate_allinone.configscreen.route_model.none": "Not selected",
+  "text.translate_allinone.configscreen.label.provider_view": "Provider View: %s",
+  "text.translate_allinone.configscreen.label.provider_platforms": "Model Platforms",
+  "text.translate_allinone.configscreen.label.profile": "Profile: %s [%s]",
+  "text.translate_allinone.configscreen.label.profile_name": "Name",
+  "text.translate_allinone.configscreen.label.profile_id": "ID",
+  "text.translate_allinone.configscreen.label.provider_id_value": "Provider ID: %s",
+  "text.translate_allinone.configscreen.label.provider_type": "Provider Type",
+  "text.translate_allinone.configscreen.label.current_platform": "Current Platform: %s",
+  "text.translate_allinone.configscreen.label.base_url": "Base URL",
+  "text.translate_allinone.configscreen.label.api_key": "API Key",
+  "text.translate_allinone.configscreen.label.model_id": "Model ID",
+  "text.translate_allinone.configscreen.label.models": "Model Management",
+  "text.translate_allinone.configscreen.label.no_models": "No models yet, add one first",
+  "text.translate_allinone.configscreen.label.request_preview": "Request Preview: %s",
+  "text.translate_allinone.configscreen.label.temperature": "Temperature",
+  "text.translate_allinone.configscreen.label.keep_alive": "Keep Alive",
+  "text.translate_allinone.configscreen.label.system_prompt_suffix": "System Prompt Suffix",
+  "text.translate_allinone.configscreen.label.custom_parameters": "Custom Parameters (k=v;...)",
+  "text.translate_allinone.configscreen.label.type": "Type: %s",
+  "text.translate_allinone.configscreen.label.supports_system_msg": "Supports System Msg",
+  "text.translate_allinone.configscreen.label.structured_output": "Structured Output",
+  "text.translate_allinone.configscreen.label.route_assign": "Route %s -> %s",
+  "text.translate_allinone.configscreen.provider.missing": "%s (MISSING)",
+  "text.translate_allinone.configscreen.provider.named": "%s [%s]",
+  "text.translate_allinone.configscreen.provider.default_name": "Provider %s",
+  "text.translate_allinone.configscreen.provider_type.openai_compat": "OpenAI",
+  "text.translate_allinone.configscreen.provider_type.openai_response": "OpenAI-Response",
+  "text.translate_allinone.configscreen.provider_type.ollama": "OLLAMA",
+  "text.translate_allinone.configscreen.provider_view.routing": "Routing",
+  "text.translate_allinone.configscreen.provider_view.details": "Details",
+  "text.translate_allinone.configscreen.route.item": "ITEM",
+  "text.translate_allinone.configscreen.route.scoreboard": "SCOREBOARD",
+  "text.translate_allinone.configscreen.route.chat_input": "CHAT_INPUT",
+  "text.translate_allinone.configscreen.route.chat_output": "CHAT_OUTPUT",
+  "text.translate_allinone.configscreen.status.assigned_route": "Assigned %s route to %s",
+  "text.translate_allinone.configscreen.status.removed_profile": "Removed profile: %s",
+  "text.translate_allinone.configscreen.status.added_provider": "Added provider: %s",
+  "text.translate_allinone.configscreen.status.config_saved": "Config saved: %s",
+  "text.translate_allinone.configscreen.status.config_reset_pending": "Config reset to defaults, click DONE to save",
+  "text.translate_allinone.configscreen.status.testing_provider": "Testing: %s",
+  "text.translate_allinone.configscreen.status.test_success": "Test passed: %s (%s)",
+  "text.translate_allinone.configscreen.status.test_failed": "Test failed: %s (%s)",
+  "text.translate_allinone.configscreen.status.added_model": "Added model: %s",
+  "text.translate_allinone.configscreen.status.updated_model": "Updated model: %s",
+  "text.translate_allinone.configscreen.status.removed_model": "Removed model: %s",
+  "text.translate_allinone.configscreen.status.model_set_default": "Default model changed to: %s",
+  "text.translate_allinone.configscreen.status.hotkey_listening": "Listening for %s hotkey, press keyboard/mouse key",
+  "text.translate_allinone.configscreen.status.hotkey_cleared": "Cleared %s hotkey",
+  "text.translate_allinone.configscreen.status.hotkey_mode_changed": "%s mode changed to: %s",
+  "text.translate_allinone.configscreen.status.hotkey_bound": "%s hotkey bound: %s",
+  "text.translate_allinone.configscreen.status.hotkey_capture_cancelled": "Hotkey binding cancelled",
+  "text.translate_allinone.configscreen.empty.providers_hint": "No model platform added yet. Click ADD below to create one",
+  "text.translate_allinone.configscreen.empty.search_no_match": "No platform matched your search",
+  "text.translate_allinone.configscreen.empty.provider_detail": "Select a platform in the middle column first",
+  "text.translate_allinone.configscreen.placeholder.search_platform": "Search model platforms...",
+  "text.translate_allinone.configscreen.placeholder.provider_name": "e.g. OpenAI",
+  "text.translate_allinone.configscreen.placeholder.model_id": "e.g. gpt-4o-mini",
+  "text.translate_allinone.configscreen.placeholder.target_language": "e.g. Chinese / English / Japanese",
+  "text.translate_allinone.configscreen.modal.add_provider.title": "Add Provider",
+  "text.translate_allinone.configscreen.modal.add_provider.name": "Provider Name",
+  "text.translate_allinone.configscreen.modal.add_provider.type": "Provider Type",
+  "text.translate_allinone.configscreen.modal.add_provider.logo": "P",
+  "text.translate_allinone.configscreen.modal.model.title": "Model Settings",
+  "text.translate_allinone.configscreen.modal.model.name": "Model Name",
+  "text.translate_allinone.configscreen.modal.model.temperature": "Temperature",
+  "text.translate_allinone.configscreen.modal.model.keep_alive": "Keep Alive",
+  "text.translate_allinone.configscreen.modal.model.supports_system_msg": "Supports System Message",
+  "text.translate_allinone.configscreen.modal.model.inject_prompt_into_user": "Inject prompt into user message",
+  "text.translate_allinone.configscreen.modal.model.structured_output": "Structured Output",
+  "text.translate_allinone.configscreen.modal.model.system_prompt_suffix": "Prompt Suffix",
+  "text.translate_allinone.configscreen.modal.model.custom_parameters": "Custom Parameters",
+  "text.translate_allinone.configscreen.modal.model.set_default": "Set as default model",
+  "text.translate_allinone.configscreen.modal.reset_confirm.title": "Reset Config",
+  "text.translate_allinone.configscreen.modal.reset_confirm.message": "Reset all settings to defaults? Unsaved changes will be lost.",
+  "text.translate_allinone.configscreen.custom_params.title": "Custom Parameter Tree",
+  "text.translate_allinone.configscreen.custom_params.columns": "[Name] [Value]",
+  "text.translate_allinone.configscreen.custom_params.empty": "No parameters yet. Add one below",
+  "text.translate_allinone.configscreen.custom_params.select_hint": "Select a parameter node on the left first",
+  "text.translate_allinone.configscreen.custom_params.name": "Name",
+  "text.translate_allinone.configscreen.custom_params.value": "Value",
+  "text.translate_allinone.configscreen.custom_params.type_object": "Type: Object",
+  "text.translate_allinone.configscreen.custom_params.type_value": "Type: Value",
+  "text.translate_allinone.configscreen.custom_params.detected_type": "Auto detected type: %s",
+  "text.translate_allinone.configscreen.custom_params.value_type_bool": "Boolean",
+  "text.translate_allinone.configscreen.custom_params.value_type_number": "Number",
+  "text.translate_allinone.configscreen.custom_params.value_type_string": "String",
+  "text.translate_allinone.configscreen.error.no_provider_profiles": "No provider profiles available",
+  "text.translate_allinone.configscreen.error.at_least_one_profile": "At least one profile is required",
+  "text.translate_allinone.configscreen.error.model_id_required": "Model name is required",
+  "text.translate_allinone.configscreen.error.model_id_exists": "Model already exists: %s",
+  "text.translate_allinone.configscreen.error.custom_params_select_node": "Please select a parameter node first",
+  "text.translate_allinone.configscreen.error.custom_params_object_has_children": "This object node has children and cannot be switched to value type",
+  "text.translate_allinone.configscreen.error.temperature_invalid": "Temperature must be a valid number",
+  "text.translate_allinone.configscreen.error.save_failed": "Save failed: %s"
 }
