--- a/src/main/resources/assets/translate_allinone/lang/zh_cn.json
+++ b/src/main/resources/assets/translate_allinone/lang/zh_cn.json
@@ -110,14 +110,14 @@
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.ollama.custom_parameters.@Tooltip": "随API请求发送的自定义参数",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.keybinding": "快捷键设置",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.keybinding.mode": "快捷键模式",
-  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.keybinding.mode.@PrefixText": "快捷键需要在游戏控制设置中修改。",
+  "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.keybinding.mode.@PrefixText": "请在模组配置界面中修改快捷键。",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.keybinding.mode.@Tooltip[0]": "物品翻译的快捷键模式。",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.keybinding.mode.@Tooltip[1]": "- 按住翻译: 仅在按住按键时翻译。",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.keybinding.mode.@Tooltip[2]": "- 按住查看原文: 始终翻译, 在按住按键时显示原文。",
   "text.autoconfig.translate_allinone/translate_allinone.option.itemTranslate.keybinding.mode.@Tooltip[3]": "- 禁用: 快捷键不影响翻译行为。",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.keybinding": "快捷键设置",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.keybinding.mode": "快捷键模式",
-  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.keybinding.mode.@PrefixText": "快捷键需要在游戏控制设置中修改。",
+  "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.keybinding.mode.@PrefixText": "请在模组配置界面中修改快捷键。",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.keybinding.mode.@Tooltip[0]": "计分板翻译的快捷键模式。",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.keybinding.mode.@Tooltip[1]": "- 按住翻译: 仅在按住按键时翻译。",
   "text.autoconfig.translate_allinone/translate_allinone.option.scoreboardTranslate.keybinding.mode.@Tooltip[2]": "- 按住查看原文: 始终翻译, 在按住按键时显示原文。",
@@ -174,5 +174,160 @@
   "text.translate_allinone.translate_button_hover": "翻译这条消息",
   "text.translate_allinone.processing": "处理中...",
   "text.translate_allinone.thinking": "思考中... Tokens:%d",
-  "text.translate_allinone.connecting": "连接中..."
-} 
+  "text.translate_allinone.connecting": "连接中...",
+
+  "text.translate_allinone.configscreen.title": "Translate_AllinOne 配置",
+  "text.translate_allinone.configscreen.button.save": "保存",
+  "text.translate_allinone.configscreen.button.done": "完成",
+  "text.translate_allinone.configscreen.button.prev": "上一项",
+  "text.translate_allinone.configscreen.button.next": "下一项",
+  "text.translate_allinone.configscreen.button.add_profile": "新增配置",
+  "text.translate_allinone.configscreen.button.add_provider": "添加",
+  "text.translate_allinone.configscreen.button.confirm_add_provider": "确认添加",
+  "text.translate_allinone.configscreen.button.delete_provider": "删除平台",
+  "text.translate_allinone.configscreen.button.delete": "删除",
+  "text.translate_allinone.configscreen.button.test_connection": "测试连接",
+  "text.translate_allinone.configscreen.button.test": "检测",
+  "text.translate_allinone.configscreen.button.show_key": "显示",
+  "text.translate_allinone.configscreen.button.hide_key": "隐藏",
+  "text.translate_allinone.configscreen.button.add_model": "添加模型",
+  "text.translate_allinone.configscreen.button.edit_custom_parameters": "编辑参数（%s）",
+  "text.translate_allinone.configscreen.button.add_root_parameter": "新增顶层参数",
+  "text.translate_allinone.configscreen.button.add_sibling_parameter": "新增同级参数",
+  "text.translate_allinone.configscreen.button.add_child_parameter": "新增子参数",
+  "text.translate_allinone.configscreen.button.delete_parameter": "删除该参数",
+  "text.translate_allinone.configscreen.button.model_save": "保存模型",
+  "text.translate_allinone.configscreen.button.cancel": "取消",
+  "text.translate_allinone.configscreen.button.reset": "重置",
+  "text.translate_allinone.configscreen.button.hotkey_clear": "清除快捷键",
+  "text.translate_allinone.configscreen.sections": "分区",
+  "text.translate_allinone.configscreen.panel": "面板：%s",
+  "text.translate_allinone.configscreen.section.providers": "供应商",
+  "text.translate_allinone.configscreen.section.chat_output": "聊天输出",
+  "text.translate_allinone.configscreen.section.chat_input": "聊天输入",
+  "text.translate_allinone.configscreen.section.item": "物品",
+  "text.translate_allinone.configscreen.section.scoreboard": "计分板",
+  "text.translate_allinone.configscreen.state.on": "开",
+  "text.translate_allinone.configscreen.state.off": "关",
+  "text.translate_allinone.configscreen.state.disabled": "禁用",
+  "text.translate_allinone.configscreen.state.hold_to_translate": "按住翻译",
+  "text.translate_allinone.configscreen.state.hold_to_see_original": "按住看原文",
+  "text.translate_allinone.configscreen.state.hotkey_listening": "按任意键... (ESC 取消)",
+  "text.translate_allinone.configscreen.state.hotkey_unbound": "未绑定",
+  "text.translate_allinone.configscreen.label.toggle": "%s：%s",
+  "text.translate_allinone.configscreen.label.enabled": "启用",
+  "text.translate_allinone.configscreen.label.auto_translate": "自动翻译",
+  "text.translate_allinone.configscreen.label.streaming": "流式响应",
+  "text.translate_allinone.configscreen.label.translate_item_name": "翻译物品名称",
+  "text.translate_allinone.configscreen.label.translate_item_lore": "翻译物品简介",
+  "text.translate_allinone.configscreen.label.item_threads": "物品线程数",
+  "text.translate_allinone.configscreen.label.item_batch_size": "每批提交条数",
+  "text.translate_allinone.configscreen.label.translate_prefix_suffix": "翻译前后缀",
+  "text.translate_allinone.configscreen.label.translate_player_name": "翻译玩家名",
+  "text.translate_allinone.configscreen.label.target_language": "目标语言",
+  "text.translate_allinone.configscreen.group.basic": "基础设置",
+  "text.translate_allinone.configscreen.group.hotkey": "快捷键",
+  "text.translate_allinone.configscreen.group.performance": "性能设置",
+  "text.translate_allinone.configscreen.group.route": "路由设置",
+  "text.translate_allinone.configscreen.group.providers.list": "供应商列表",
+  "text.translate_allinone.configscreen.group.providers.info": "平台信息",
+  "text.translate_allinone.configscreen.group.providers.models": "模型管理",
+  "text.translate_allinone.configscreen.label.hotkey_mode": "快捷键模式：%s",
+  "text.translate_allinone.configscreen.label.hotkey_binding": "快捷键：%s",
+  "text.translate_allinone.configscreen.label.route_model": "路由模型：%s",
+  "text.translate_allinone.configscreen.route_model.none": "未选择",
+  "text.translate_allinone.configscreen.label.provider_view": "供应商视图：%s",
+  "text.translate_allinone.configscreen.label.provider_platforms": "模型平台",
+  "text.translate_allinone.configscreen.label.profile": "配置：%s [%s]",
+  "text.translate_allinone.configscreen.label.profile_name": "名称",
+  "text.translate_allinone.configscreen.label.profile_id": "ID",
+  "text.translate_allinone.configscreen.label.provider_id_value": "平台 ID：%s",
+  "text.translate_allinone.configscreen.label.provider_type": "提供商类型",
+  "text.translate_allinone.configscreen.label.current_platform": "当前平台：%s",
+  "text.translate_allinone.configscreen.label.base_url": "Base URL",
+  "text.translate_allinone.configscreen.label.api_key": "API Key",
+  "text.translate_allinone.configscreen.label.model_id": "模型 ID",
+  "text.translate_allinone.configscreen.label.models": "模型管理",
+  "text.translate_allinone.configscreen.label.no_models": "暂无模型，请先添加",
+  "text.translate_allinone.configscreen.label.request_preview": "请求地址预览：%s",
+  "text.translate_allinone.configscreen.label.temperature": "温度",
+  "text.translate_allinone.configscreen.label.keep_alive": "Keep Alive",
+  "text.translate_allinone.configscreen.label.system_prompt_suffix": "系统提示词后缀",
+  "text.translate_allinone.configscreen.label.custom_parameters": "自定义参数（k=v;...）",
+  "text.translate_allinone.configscreen.label.type": "类型：%s",
+  "text.translate_allinone.configscreen.label.supports_system_msg": "支持系统消息",
+  "text.translate_allinone.configscreen.label.structured_output": "结构化输出",
+  "text.translate_allinone.configscreen.label.route_assign": "路由 %s -> %s",
+  "text.translate_allinone.configscreen.provider.missing": "%s（缺失）",
+  "text.translate_allinone.configscreen.provider.named": "%s [%s]",
+  "text.translate_allinone.configscreen.provider.default_name": "提供商 %s",
+  "text.translate_allinone.configscreen.provider_type.openai_compat": "OpenAI",
+  "text.translate_allinone.configscreen.provider_type.openai_response": "OpenAI-Response",
+  "text.translate_allinone.configscreen.provider_type.ollama": "Ollama",
+  "text.translate_allinone.configscreen.provider_view.routing": "路由",
+  "text.translate_allinone.configscreen.provider_view.details": "详情",
+  "text.translate_allinone.configscreen.route.item": "物品",
+  "text.translate_allinone.configscreen.route.scoreboard": "计分板",
+  "text.translate_allinone.configscreen.route.chat_input": "聊天输入",
+  "text.translate_allinone.configscreen.route.chat_output": "聊天输出",
+  "text.translate_allinone.configscreen.status.assigned_route": "已将 %s 路由设置为 %s",
+  "text.translate_allinone.configscreen.status.removed_profile": "已删除配置：%s",
+  "text.translate_allinone.configscreen.status.added_provider": "已添加平台：%s",
+  "text.translate_allinone.configscreen.status.config_saved": "配置已保存：%s",
+  "text.translate_allinone.configscreen.status.config_reset_pending": "已重置为默认配置，点击完成保存",
+  "text.translate_allinone.configscreen.status.testing_provider": "正在测试：%s",
+  "text.translate_allinone.configscreen.status.test_success": "测试成功：%s（%s）",
+  "text.translate_allinone.configscreen.status.test_failed": "测试失败：%s（%s）",
+  "text.translate_allinone.configscreen.status.added_model": "已添加模型：%s",
+  "text.translate_allinone.configscreen.status.updated_model": "已更新模型：%s",
+  "text.translate_allinone.configscreen.status.removed_model": "已删除模型：%s",
+  "text.translate_allinone.configscreen.status.model_set_default": "默认模型已切换为：%s",
+  "text.translate_allinone.configscreen.status.hotkey_listening": "正在绑定 %s 快捷键，按任意键或鼠标键",
+  "text.translate_allinone.configscreen.status.hotkey_cleared": "已清除 %s 快捷键",
+  "text.translate_allinone.configscreen.status.hotkey_mode_changed": "%s 模式已切换为：%s",
+  "text.translate_allinone.configscreen.status.hotkey_bound": "%s 快捷键已绑定：%s",
+  "text.translate_allinone.configscreen.status.hotkey_capture_cancelled": "已取消快捷键绑定",
+  "text.translate_allinone.configscreen.empty.providers_hint": "还没有添加模型平台，点击下方“添加”开始接入",
+  "text.translate_allinone.configscreen.empty.search_no_match": "未找到匹配的平台",
+  "text.translate_allinone.configscreen.empty.provider_detail": "请先在中间栏选择平台",
+  "text.translate_allinone.configscreen.placeholder.search_platform": "搜索模型平台...",
+  "text.translate_allinone.configscreen.placeholder.provider_name": "例如 OpenAI",
+  "text.translate_allinone.configscreen.placeholder.model_id": "例如 gpt-4o-mini",
+  "text.translate_allinone.configscreen.placeholder.target_language": "例如 Chinese / English / Japanese",
+  "text.translate_allinone.configscreen.modal.add_provider.title": "添加提供商",
+  "text.translate_allinone.configscreen.modal.add_provider.name": "提供商名称",
+  "text.translate_allinone.configscreen.modal.add_provider.type": "提供商类型",
+  "text.translate_allinone.configscreen.modal.add_provider.logo": "P",
+  "text.translate_allinone.configscreen.modal.model.title": "模型设置",
+  "text.translate_allinone.configscreen.modal.model.name": "模型名称",
+  "text.translate_allinone.configscreen.modal.model.temperature": "温度",
+  "text.translate_allinone.configscreen.modal.model.keep_alive": "Keep Alive",
+  "text.translate_allinone.configscreen.modal.model.supports_system_msg": "支持 System 消息",
+  "text.translate_allinone.configscreen.modal.model.inject_prompt_into_user": "注入提示词至用户消息",
+  "text.translate_allinone.configscreen.modal.model.structured_output": "结构化输出",
+  "text.translate_allinone.configscreen.modal.model.system_prompt_suffix": "提示词后缀",
+  "text.translate_allinone.configscreen.modal.model.custom_parameters": "自定义参数",
+  "text.translate_allinone.configscreen.modal.model.set_default": "设为默认模型",
+  "text.translate_allinone.configscreen.modal.reset_confirm.title": "重置配置",
+  "text.translate_allinone.configscreen.modal.reset_confirm.message": "确定要将配置重置为默认值吗？未保存的修改会丢失。",
+  "text.translate_allinone.configscreen.custom_params.title": "自定义参数树编辑",
+  "text.translate_allinone.configscreen.custom_params.columns": "[名称] [值]",
+  "text.translate_allinone.configscreen.custom_params.empty": "暂无参数，点击下方按钮新增",
+  "text.translate_allinone.configscreen.custom_params.select_hint": "请先在左侧选择一个参数节点",
+  "text.translate_allinone.configscreen.custom_params.name": "名称",
+  "text.translate_allinone.configscreen.custom_params.value": "值",
+  "text.translate_allinone.configscreen.custom_params.type_object": "当前类型：对象",
+  "text.translate_allinone.configscreen.custom_params.type_value": "当前类型：值",
+  "text.translate_allinone.configscreen.custom_params.detected_type": "自动识别类型：%s",
+  "text.translate_allinone.configscreen.custom_params.value_type_bool": "布尔",
+  "text.translate_allinone.configscreen.custom_params.value_type_number": "数值",
+  "text.translate_allinone.configscreen.custom_params.value_type_string": "字符串",
+  "text.translate_allinone.configscreen.error.no_provider_profiles": "没有可用的提供商配置",
+  "text.translate_allinone.configscreen.error.at_least_one_profile": "至少需要保留一个配置",
+  "text.translate_allinone.configscreen.error.model_id_required": "模型名称不能为空",
+  "text.translate_allinone.configscreen.error.model_id_exists": "模型已存在：%s",
+  "text.translate_allinone.configscreen.error.custom_params_select_node": "请先选择一个参数节点",
+  "text.translate_allinone.configscreen.error.custom_params_object_has_children": "该对象节点包含子项，不能直接改为值类型",
+  "text.translate_allinone.configscreen.error.temperature_invalid": "温度必须是有效数字",
+  "text.translate_allinone.configscreen.error.save_failed": "保存失败：%s"
+}
