feat: 升级为2.1 新增版本更新检测 修复聊天输入为选择模型时的问题

--- a/src/main/resources/assets/translate_allinone/lang/en_us.json
+++ b/src/main/resources/assets/translate_allinone/lang/en_us.json
@@ -179,6 +179,9 @@
   "text.translate_allinone.processing": "Processing...",
   "text.translate_allinone.thinking": "Thinking... Tokens:%d",
   "text.translate_allinone.connecting": "Connecting...",
+  "text.translate_allinone.update.chat.available": "[TAIO] New version %s available (current %s)",
+  "text.translate_allinone.update.chat.open": "[Click to update]",
+  "text.translate_allinone.update.chat.hover": "Open release page: %s",
 
   "text.translate_allinone.configscreen.title": "Translate_AllinOne Config",
   "text.translate_allinone.configscreen.button.save": "SAVE",
@@ -203,6 +206,7 @@
   "text.translate_allinone.configscreen.button.model_save": "SAVE MODEL",
   "text.translate_allinone.configscreen.button.cancel": "CANCEL",
   "text.translate_allinone.configscreen.button.reset": "RESET",
+  "text.translate_allinone.configscreen.button.open_release": "OPEN RELEASE",
   "text.translate_allinone.configscreen.button.hotkey_clear": "CLEAR HOTKEY",
   "text.translate_allinone.configscreen.sections": "Sections",
   "text.translate_allinone.configscreen.panel": "Panel: %s",
@@ -314,6 +318,8 @@
   "text.translate_allinone.configscreen.modal.model.set_default": "Set as default model",
   "text.translate_allinone.configscreen.modal.reset_confirm.title": "Reset Config",
   "text.translate_allinone.configscreen.modal.reset_confirm.message": "Reset all settings to defaults? Unsaved changes will be lost.",
+  "text.translate_allinone.configscreen.modal.update_notice.title": "Update Available",
+  "text.translate_allinone.configscreen.modal.update_notice.message": "New version %s detected, current version is %s. Open the release page to download the update?",
   "text.translate_allinone.configscreen.custom_params.title": "Custom Parameter Tree",
   "text.translate_allinone.configscreen.custom_params.columns": "[Name] [Value]",
   "text.translate_allinone.configscreen.custom_params.empty": "No parameters yet. Add one below",
