--- a/src/main/resources/assets/translate_allinone/lang/zh_cn.json
+++ b/src/main/resources/assets/translate_allinone/lang/zh_cn.json
@@ -175,6 +175,9 @@
   "text.translate_allinone.processing": "处理中...",
   "text.translate_allinone.thinking": "思考中... Tokens:%d",
   "text.translate_allinone.connecting": "连接中...",
+  "text.translate_allinone.update.chat.available": "[TAIO] 检测到新版本 %s（当前 %s）",
+  "text.translate_allinone.update.chat.open": "[点击前往更新]",
+  "text.translate_allinone.update.chat.hover": "打开发布页：%s",
 
   "text.translate_allinone.configscreen.title": "Translate_AllinOne 配置",
   "text.translate_allinone.configscreen.button.save": "保存",
@@ -199,6 +202,7 @@
   "text.translate_allinone.configscreen.button.model_save": "保存模型",
   "text.translate_allinone.configscreen.button.cancel": "取消",
   "text.translate_allinone.configscreen.button.reset": "重置",
+  "text.translate_allinone.configscreen.button.open_release": "前往更新",
   "text.translate_allinone.configscreen.button.hotkey_clear": "清除快捷键",
   "text.translate_allinone.configscreen.sections": "分区",
   "text.translate_allinone.configscreen.panel": "面板：%s",
@@ -310,6 +314,8 @@
   "text.translate_allinone.configscreen.modal.model.set_default": "设为默认模型",
   "text.translate_allinone.configscreen.modal.reset_confirm.title": "重置配置",
   "text.translate_allinone.configscreen.modal.reset_confirm.message": "确定要将配置重置为默认值吗？未保存的修改会丢失。",
+  "text.translate_allinone.configscreen.modal.update_notice.title": "发现新版本",
+  "text.translate_allinone.configscreen.modal.update_notice.message": "检测到新版本 %s，当前版本 %s。是否前往发布页面查看并下载更新？",
   "text.translate_allinone.configscreen.custom_params.title": "自定义参数树编辑",
   "text.translate_allinone.configscreen.custom_params.columns": "[名称] [值]",
   "text.translate_allinone.configscreen.custom_params.empty": "暂无参数，点击下方按钮新增",
