feat：增强聊天输入翻译面板并改进缓存管理
- 引入了一个新的聊天输入面板，用于 AI 写作辅助，支持多种翻译模式和指令。
- 在 `ItemTemplateCache` 和 `ScoreboardTextCache` 的缓存保存过程中新增了临时文件创建支持，以确保更新的原子性。
- 为条目和计分板翻译任务实现了重试机制，以更有效地处理错误。
- 更新了语言文件，新增了聊天输入面板的界面文案，涵盖英文和中文。

--- a/src/main/resources/assets/translate_allinone/lang/en_us.json
+++ b/src/main/resources/assets/translate_allinone/lang/en_us.json
@@ -179,6 +179,22 @@
   "text.translate_allinone.processing": "Processing...",
   "text.translate_allinone.thinking": "Thinking... Tokens:%d",
   "text.translate_allinone.connecting": "Connecting...",
+  "text.translate_allinone.chat_input_panel.title": "AI Writing Assistant",
+  "text.translate_allinone.chat_input_panel.subtitle": "Drag the header to move",
+  "text.translate_allinone.chat_input_panel.status_no_model": "No model",
+  "text.translate_allinone.chat_input_panel.status_translate_only": "This model has no system message support, translate only",
+  "text.translate_allinone.chat_input_panel.status_translate_only_short": "Translate only",
+  "text.translate_allinone.chat_input_panel.quick_actions": "Quick Actions",
+  "text.translate_allinone.chat_input_panel.instruction": "Rewrite by Instruction",
+  "text.translate_allinone.chat_input_panel.instruction_placeholder": "Tell AI how to modify the current text",
+  "text.translate_allinone.chat_input_panel.apply_instruction": "Apply",
+  "text.translate_allinone.chat_input_panel.translate": "Translate",
+  "text.translate_allinone.chat_input_panel.professional": "Professional",
+  "text.translate_allinone.chat_input_panel.friendly": "Friendly",
+  "text.translate_allinone.chat_input_panel.expand": "Expand",
+  "text.translate_allinone.chat_input_panel.concise": "Concise",
+  "text.translate_allinone.chat_input_panel.detailed": "Expand",
+  "text.translate_allinone.chat_input_panel.restore": "Restore",
   "text.translate_allinone.update.chat.available": "[TAIO] New version %s available (current %s)",
   "text.translate_allinone.update.chat.open": "[Click to update]",
   "text.translate_allinone.update.chat.hover": "Open release page: %s",
