--- a/src/main/resources/assets/translate_allinone/lang/zh_cn.json
+++ b/src/main/resources/assets/translate_allinone/lang/zh_cn.json
@@ -175,6 +175,22 @@
   "text.translate_allinone.processing": "处理中...",
   "text.translate_allinone.thinking": "思考中... Tokens:%d",
   "text.translate_allinone.connecting": "连接中...",
+  "text.translate_allinone.chat_input_panel.title": "AI写作助手",
+  "text.translate_allinone.chat_input_panel.subtitle": "拖动标题栏可移动面板",
+  "text.translate_allinone.chat_input_panel.status_no_model": "没有模型",
+  "text.translate_allinone.chat_input_panel.status_translate_only": "当前模型不支持System信息，仅可翻译",
+  "text.translate_allinone.chat_input_panel.status_translate_only_short": "仅翻译",
+  "text.translate_allinone.chat_input_panel.quick_actions": "快捷改写",
+  "text.translate_allinone.chat_input_panel.instruction": "按意见改写",
+  "text.translate_allinone.chat_input_panel.instruction_placeholder": "输入你希望AI如何修改当前文本",
+  "text.translate_allinone.chat_input_panel.apply_instruction": "应用",
+  "text.translate_allinone.chat_input_panel.translate": "翻译",
+  "text.translate_allinone.chat_input_panel.professional": "更专业",
+  "text.translate_allinone.chat_input_panel.friendly": "更友善",
+  "text.translate_allinone.chat_input_panel.expand": "扩写",
+  "text.translate_allinone.chat_input_panel.concise": "精简",
+  "text.translate_allinone.chat_input_panel.detailed": "扩写",
+  "text.translate_allinone.chat_input_panel.restore": "恢复原文",
   "text.translate_allinone.update.chat.available": "[TAIO] 检测到新版本 %s（当前 %s）",
   "text.translate_allinone.update.chat.open": "[点击前往更新]",
   "text.translate_allinone.update.chat.hover": "打开发布页：%s",
